--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -28,6 +28,7 @@ authors:
     name: Matthew Turk
     initials: MJT
     orcid: 0000-0002-5294-0198
+    corresponding: true
     mastodon: powersoffour
     mastodon-server: mastodon.social
     email: mjturk@illinois.edu
@@ -36,12 +37,12 @@ authors:
       - Department of Astronomy, University of Illinois at Urbana-Champaign
       - National Center for Supercomputing Applications, University of Illinois at Urbana-Champaign
     funders: []
-    corresponding: true
   -
     github: ngoldbaum
     name: Nathan J Goldbaum
     initial: NJG
     orcid: 0000-0001-5557-267X
+    corresponding: false
     twitter: njgoldbaum
     email: ngoldbau@illinois.edu
     affiliations:
@@ -52,6 +53,7 @@ authors:
     name: John A. ZuHone
     initials: JAZ
     orcid: 0000-0003-3175-2347
+    corresponding: false
     email: john.zuhone@cfa.harvard.edu
     twitter: astrojaz
     affiliations:
@@ -61,6 +63,7 @@ authors:
     name: Cameron Hummels
     initials: CBH
     orcid: 0000-0002-3817-8133
+    corresponding: false
     email: chummels@gmail.com
     affiliations:
       - Department of Theoretical Astrophysics, California Institute of Technology
@@ -70,6 +73,7 @@ authors:
     name: Suoqing Ji
     initials: SJ
     orcid: 0000-0001-9658-0588
+    corresponding: false
     email: suoqing@physics.ucsb.edu
     affiliations:
       - Physics Department, University of California Santa Barbara
@@ -79,6 +83,7 @@ authors:
     name: Meagan Lang
     initial: ML
     orcid: 0000-0002-2058-2816
+    corresponding: false
     email: langmm@illinois.edu
     affiliations:
       - National Center for Supercomputing Applications, University of Illinois at Urbana-Champaign
@@ -88,6 +93,7 @@ authors:
     name: Madicken Munk
     initials: MM
     orcid: 0000-0003-0117-5366
+    corresponding: false
     email: mmunk2@illinois.edu
     affiliations:
       - National Center for Supercomputing Applications, University of Illinois at Urbana-Champaign
@@ -97,6 +103,7 @@ authors:
     name: Britton Smith
     initials: BDS
     orcid: 0000-0002-6804-630X
+    corresponding: false
     email: britton.smith@ed.ac.uk
     affiliations:
       - University of Edinburgh
@@ -105,6 +112,7 @@ authors:
     name: Kacper Kowalik
     initial: KK
     orcid: 0000-0003-1709-3744
+    corresponding: false
     email: kowalikk@illinois.edu
     affiliations:
       - National Center for Supercomputing Applications, University of Illinois at Urbana-Champaign
@@ -114,6 +122,7 @@ authors:
     name: Miguel de Val-Borro
     initials: MVB
     orcid: 000-0002-0455-9384
+    corresponding: false
     email: mdeval@psi.edu
     affiliations:
       - Planetary Science Institute
@@ -122,6 +131,7 @@ authors:
     name: Jared W. Coughlin
     initials: JWC
     orcid: 0000-0002-4373-4114
+    corresponding: false
     email: jcoughl3@illinois.edu
     affiliations:
       - National Center for Supercomputing Applications, University of Illinois at Urbana-Champaign
@@ -131,6 +141,7 @@ authors:
     name: Corentin Cadiou
     initials: CC
     orcid: 0000-0003-2285-0332
+    corresponding: false
     twitter: cphyc
     email: c.cadiou@ucl.ac.uk
     affiliations:
@@ -141,6 +152,7 @@ authors:
     name: Michael Zingale
     initials: MZ
     orcid: 0000-0001-8401-030X
+    corresponding: false
     email: michael.zingale@stonybrook.edu
     affiliations:
       - Stony Brook University
@@ -149,6 +161,7 @@ authors:
     name: Leigh Orf
     initials: ORF
     orcid: 0000-0002-2677-6427
+    corresponding: false
     email: leigh.orf@ssec.wisc.edu
     affiliations:
       - Space Science and Engineering Center, University of Wisconsin - Madison
@@ -157,6 +170,7 @@ authors:
     name: Kelton Halbert
     initials: KTH
     orcid: 0000-0001-6898-2731
+    corresponding: false
     email: kthalbert@wisc.edu
     affiliations:
       - Cooperative Institute for Meteorological Satellite Studies, The University of Wisconsin, Madison
@@ -165,6 +179,7 @@ authors:
     name: Clément Robert
     initials: CMTR
     orcid: 0000-0001-8629-7068
+    corresponding: false
     email: cmt.robert@univ-grenoble-alpes.fr
     affiliations:
       - Institut de Planétologie et d'Astrophysique de Grenoble (IPAG), Université Grenoble Alpes, France
@@ -173,6 +188,7 @@ authors:
     name: Christopher Havlin
     initials: CH
     orcid: 0000-0003-0585-8236
+    corresponding: false
     email: chavlin@illinois.edu
     affiliations:
       - School of Information Sciences, University of Illinois at Urbana-Champaign
@@ -182,6 +198,7 @@ authors:
     name: Stephanie Tonnesen
     initials: ST
     orcid: 0000-0002-8710-9206
+    corresponding: false
     email: stonnesen@flatironinstitute.org
     affiliations:
       - Center for Computational Astrophysics, Flatiron Institute
@@ -190,6 +207,7 @@ authors:
     name: Andrew Myers
     initials: AM
     orcid: 0000-0001-8427-8330
+    corresponding: false
     email: atmyers@lbl.gov
     affiliations:
       - Lawrence Berkeley National Laboratory
@@ -199,6 +217,7 @@ authors:
     name: Alex Gurvich
     initials: AG
     orcid: 0000-0002-6145-3674
+    corresponding: false
     email: alex.b.gurvich@gmail.com
     affiliations: []
     funders: []
@@ -213,6 +232,7 @@ authors:
     initials: DN
     name: Desika Narayanan
     orcid: 0000-0002-7064-4309
+    corresponding: false
   - affiliations:
       - Outer Loop LLC
     email: samskillman@gmail.com
@@ -221,6 +241,7 @@ authors:
     initials: SWS
     name: Samuel W. Skillman
     orcid: 0000-0002-7626-522X
+    corresponding: false
   - affiliations:
       - Lawrence Berkeley National Laboratory
     email: axelhuebl@lbl.gov
@@ -229,6 +250,7 @@ authors:
     initials: AH
     name: Axel Huebl
     orcid: 0000-0003-1943-7141
+    corresponding: false
   - affiliations:
       - Oak Ridge National Laboratory
     email: veb@ornl.gov
@@ -237,6 +259,7 @@ authors:
     initials: EB
     name: Elliott Biondo
     orcid: 0000-0002-9088-1360
+    corresponding: false
   - affiliations:
       - University of California, Davis
     email: awetzel@ucdavis.edu
@@ -245,6 +268,7 @@ authors:
     initials: AW
     name: Andrew Wetzel
     orcid: 0000-0003-0603-8942
+    corresponding: false
   - affiliations:
       - UC Santa Cruz
     email: cjstrawn@ucsc.edu
@@ -253,6 +277,7 @@ authors:
     initials: CS
     name: Clayton Strawn
     orcid: 0000-0001-9695-4017
+    corresponding: false
   - affiliations:
       - Idaho National Laboratory
     email: alexander.lindsay@inl.gov
@@ -261,6 +286,7 @@ authors:
     initials: AL
     name: Alexander Lindsay
     orcid: 0000-0002-6988-2123
+    corresponding: false
   - affiliations:
       - Free Agent
     email: gabriel.altay@gmail.com
@@ -269,6 +295,7 @@ authors:
     initials: GA
     name: Gabriel Altay
     orcid: 0000-0002-4120-2907
+    corresponding: false
   - affiliations:
       - Center for Astrophysics - Harvard & Smithsonian
       - University of Miami
@@ -278,6 +305,7 @@ authors:
     initials: ETL
     name: Erwin T. Lau
     orcid: 0000-0001-8914-8885
+    corresponding: false
   - affiliations:
       - Center for Astrophysics - Harvard & Smithsonian
     email: aaron.smith@cfa.harvard.edu
@@ -286,6 +314,7 @@ authors:
     initials: AS
     name: Aaron Smith
     orcid: 0000-0002-2838-9033
+    corresponding: false
   - affiliations:
       - Center for Theoretical Physics, Seoul National University
     email: mornkr@snu.ac.kr
@@ -294,6 +323,7 @@ authors:
     initials: JK
     name: Ji-hoon Kim
     orcid: 0000-0003-4464-1160
+    corresponding: false
   - affiliations:
       - Institute of Astrophysics, National Taiwan University, Taipei 10617, Taiwan
       - Physics Division, National Center for Theoretical Sciences, Taipei 10617, Taiwan
@@ -303,6 +333,7 @@ authors:
     initials: HS
     name: Hsi-Yu Schive
     orcid: 0000-0002-1249-279X
+    corresponding: false
   - affiliations:
       - Indian Institute of Technology Kharagpur
     email: navaneeths1998@gmail.com
@@ -311,6 +342,7 @@ authors:
     initials: NS
     name: Navaneeth S
     orcid: 0009-0007-6922-0369
+    corresponding: false
   - affiliations:
       - Michigan State University
     email: oshea@msu.edu
@@ -319,6 +351,7 @@ authors:
     initials: BWO
     name: Brian W. O'Shea
     orcid: 0000-0002-2786-0348
+    corresponding: false
   - affiliations:
       - Kavli Institute for Particle Astrophysics and Cosmology, Stanford University
     email: tabel@stanford.edu
@@ -327,6 +360,7 @@ authors:
     initials: TA
     name: Tom Abel
     orcid: 0000-0002-5969-1251
+    corresponding: false
   - affiliations:
       - Birla Institute of Technology and Science, Pilani, Sancoale, Goa 403726, India
     email: yashgondhalekar567@gmail.com
@@ -335,6 +369,7 @@ authors:
     initials: YG
     name: Yash Gondhalekar
     orcid: 0000-0002-6646-4225
+    corresponding: false
   - affiliations: []
     email: graywilliamj@gmail.com
     funders: []
@@ -342,6 +377,7 @@ authors:
     initials: WJG
     name: William J Gray
     orcid: 0000-0001-9014-3125
+    corresponding: false
   - affiliations:
       - Fermilab
     email: gnedin@fnal.gov
@@ -350,6 +386,7 @@ authors:
     initials: NYG
     name: Nickolay Y. Gnedin
     orcid: 0000-0001-5925-4580
+    corresponding: false
   - affiliations:
       - Institute of theoretical physics, Chinese Academy of Science
     email: cristian.joana@itp.ac.cn
@@ -358,6 +395,7 @@ authors:
     initials: CJ
     name: Cristian Joana
     orcid: 0000-0003-4642-3028
+    corresponding: false
   - affiliations:
       - University of North Texas
     email: yuan.astro@gmail.com
@@ -366,6 +404,7 @@ authors:
     initials: YL
     name: Yuan Li
     orcid: 0000-0001-5262-6150
+    corresponding: false
   - affiliations:
       - Max Planck Institute for Astrophysics
     email: rjfarber@umich.edu
@@ -374,6 +413,7 @@ authors:
     initials: RJF
     name: Ryan Jeffrey Farber
     orcid: 0000-0002-0649-9055
+    corresponding: false
   - affiliations:
       - Los Alamos National Laboratory
     email: jonahm@lanl.gov
@@ -382,6 +422,7 @@ authors:
     initials: JMM
     name: Jonah M Miller
     orcid: 0000-0001-6432-7860
+    corresponding: false
   - affiliations:
       - Penn State University
     email: mzr55@psu.edu
@@ -390,6 +431,7 @@ authors:
     initials: MR
     name: Michael Ryan
     orcid: 0000-0002-0378-5195
+    corresponding: false
   - affiliations:
       - Michigan State University
     email: dsilvia@msu.edu
@@ -398,6 +440,7 @@ authors:
     initials: DWS
     name: Devin W. Silvia
     orcid: 0000-0002-4109-9313
+    corresponding: false
   - affiliations:
       - Argonne National Laboratory
     email: rjackson@anl.gov
@@ -406,6 +449,7 @@ authors:
     initials: RJ
     name: Robert Jackson
     orcid: 0000-0003-2518-1234
+    corresponding: false
   - affiliations:
       - none
     email: karraki@gmail.com
@@ -414,6 +458,7 @@ authors:
     initials: KA
     name: Kenz Arraki
     orcid: 0000-0002-3012-1167
+    corresponding: false
   - affiliations:
       - Indian Institute of Science, Bangalore, India
     email: alankardutta@iisc.ac.in
@@ -422,6 +467,7 @@ authors:
     initials: AD
     name: Alankar Dutta
     orcid: 0000-0002-9287-4033
+    corresponding: false
   - affiliations:
       - 'Indian Institute of Science'
     email: ritalighosh@iisc.ac.in
@@ -430,6 +476,7 @@ authors:
     initials: RG
     name: Ritali Ghosh
     orcid: 0000-0001-8643-7104
+    corresponding: false
   - affiliations:
       - Shanghai Astronomical Observatory, Chinese Academy of Sciences
       - School of Astronomy and Space Sciences, University of Chinese Academy of Sciences
@@ -439,11 +486,13 @@ authors:
     initials: SX
     name: Shaokun Xie
     orcid: 0000-0001-5624-6008
+    corresponding: false
   -
     github: jnaiman
     name: Jill P. Naiman
     initials: JPN
     orcid: 0000-0002-9397-6189
+    corresponding: false
     email: jnaiman@illinois.edu
     affiliations:
       - School of Information Sciences, University of Illinois, Urbana-Champaign
@@ -453,6 +502,7 @@ authors:
     name: Ronan Hix
     initials: RH
     orcid: 0000-0002-7047-3730
+    corresponding: false
     email: hixronan@gmail.com
     affiliations:
       - University of Maryland, Oak Ridge National Lab
@@ -463,6 +513,7 @@ authors:
     name: Josh Borrow
     initials: JB
     orcid: 0000-0002-1327-1921
+    corresponding: false
     email: josh@joshborrow.com
     affiliations:
       - Department of Physics, Kavli Institute for Astrophysics and Space Research, Massachusetts Institute of Technology, Cambridge, MA 02139, USA
@@ -472,6 +523,7 @@ authors:
     name: Bili Dong
     initials: BD
     orcid: 0000-0001-5081-9039
+    corresponding: false
     email: qobilidop@gmail.com
     affiliations:
       - Department of Physics, Center for Astrophysics and Space Sciences, University of California at San Diego
@@ -481,6 +533,7 @@ authors:
     name: Ole Streicher
     initials: OS
     orcid: 0000-0001-7751-1843
+    corresponding: false
     email: ole@aip.de
     affiliations:
       - Leibniz Institute for Astrophysics Potsdam (AIP)
@@ -490,6 +543,7 @@ authors:
     name: Stuart Mumford
     initials: SM
     orcid: 0000-0003-4217-4642
+    corresponding: false
     email: stuart@cadair.com
     affiliations:
       - Aperio Software Ltd, UK
@@ -499,6 +553,7 @@ authors:
     name: Benjamin Keller
     initials: BWK
     orcid: 0000-0002-9642-7193
+    corresponding: false
     email: bkeller1@memphis.edu
     affiliations:
       - Department of Physics and Materials Science, University of Memphis
@@ -508,6 +563,7 @@ authors:
     name: Benjamin Thompson
     initials: BBT
     orcid: 0000-0003-4383-9183
+    corresponding: false
     email: ben@benjaminbthompson.com
     affiliations:
       - Jeremiah Horrocks Institute, University of Central Lancashire, Preston, Lancashire, PR1 2HE, UK
@@ -519,6 +575,7 @@ authors:
     name: Philipp Grete
     initials: PG
     orcid: 0000-0003-3555-9886
+    corresponding: false
     email: pgrete@hs.uni-hamburg.de
     affiliations:
       - University of Hamburg
@@ -529,6 +586,7 @@ authors:
     name: John H. Wise
     initials: JHW
     orcid: 0000-0003-1173-8847
+    corresponding: false
     email: jwise@physics.gatech.edu
     affiliations:
       - Center for Relativistic Astrophysics, School of Physics, Georgia Institute of Technology, Atlanta, GA 30332, USA
@@ -540,6 +598,7 @@ authors:
     name: Shin-Rong Tsai
     initials: SRT
     orcid: 0000-0003-4635-6259
+    corresponding: false
     email: srtsai@illinois.edu
     affiliations:
       - Department of Physics, National Taiwan University
@@ -550,6 +609,7 @@ authors:
     name: Add Yourself
     initials: YOU
     orcid: XXXX-XXXX-XXXX-XXXX
+    corresponding: false
     email: you@example.com
     affiliations:
       - Your University
