One more corresponding: false

--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -23,6 +23,7 @@ authors:
     affiliations:
       - NumFOCUS
     funders: []
+    corresponding: false
   -
     github: MatthewTurk
     name: Matthew Turk
