Update usage for RAMSES + yt
Obtained from https://ui.adsabs.harvard.edu/search/p_\=0\&q\=\(\(\(citations\(bibcode%3A2011ApJS..192....9T\)%20AND%20citations\(bibcode%3A2002A%26A...385..337T\)\)\)%20AND%20citation_count%3A%5B42%20TO%209999999%5D\)\&sort\=date%20desc%2C%20bibcode%20desc

--- a/content/frontends.yaml
+++ b/content/frontends.yaml
@@ -301,6 +301,20 @@ frontends:
   - octree
   name: ramses
   usage_citations:
+  - '@doi:10.1051/0004-6361/202243170oi'
+  - '@doi:10.1051/0004-6361/202037698oi'
+  - '@doi:10.1051/0004-6361/201936188oi'
+  - '@doi:10.1051/0004-6361/201935504oi'
+  - '@doi:10.1093/mnras/sty2859oi'
+  - '@doi:10.1093/mnras/sty024oi'
+  - '@doi:10.3847/1538-4357/aa989aoi'
+  - '@doi:10.1093/mnras/stx1706oi'
+  - '@doi:10.3847/1538-4357/833/2/202oi'
+  - '@doi:10.3847/0004-637X/826/1/22oi'
+  - '@doi:10.1088/0004-637X/807/1/67oi'
+  - '@doi:10.1088/0067-0049/210/1/14oi'
+  - '@doi:10.1093/mnras/stt1789oi'
+  - '@doi:10.1088/0004-637X/765/1/39oi'
   - '@doi:10.3847/1538-4357/aa6dff'
   - '@doi:10.48550/arXiv.2206.11913'
   - '@doi:10.1051/0004-6361/201834496'
