--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -132,9 +132,8 @@ authors:
     initials: CC
     orcid: 0000-0003-2285-0332
     twitter: cphyc
-    email: c.cadiou@ucl.ac.uk
+    email: cadiou@iap.fr
     affiliations:
-      - Department of Physics and Astrophysics, University College London
       - Institut d'Astrophysique de Paris
   -
     github: zingale
