--- a/content/metadata.yaml
+++ b/content/metadata.yaml
@@ -134,6 +134,7 @@ authors:
     twitter: cphyc
     email: cadiou@iap.fr
     affiliations:
+      - Department of Physics, division of Astrophysics, Lund University
       - Institut d'Astrophysique de Paris
   -
     github: zingale
